2003-10-13  Nick Garnett  <nickg@balti.calivar.com>

	* src/common/clock.cxx (Cyg_Counter::tick): Changed code to deal
	with manipulation of unsorted lists (see ChangeLogs passim). There
	are several corner cases where the current code does not
	work. Replaced with a more straightforward, but slightly more
	expensive, implementation.

2003-09-22  Reinhard Jessich  <Reinhard.Jessich@frequentis.com>

	* src/common/clock.cxx: Removed	label/goto
	add_alarm_unlock_return to get rid of compiler error when
	CYGIMP_KERNEL_COUNTERS_SORT_LIST is enabled.

2003-09-01  Bart Veer  <bartv@ecoscentric.com>

	* doc/kernel.sgml: fix typo, cyg_thread vs. cyg_thread_t

2003-07-18  Nick Garnett  <nickg@balti.calivar.com>

	* cdl/counters.cdl: Removed the counters override CDL
	options. These are no longer very useful, since too much
	non-kernel code now uses the HAL options to get these values.

2003-07-10  Nick Garnett  <nickg@balti.calivar.com>

	* src/common/clock.cxx (Cyg_Counter::tick): In unsorted list case:
	moved saving of next node details to before re-insertion of alarms
	with intervals. The call to add_alarm() can make enough of a
	difference to the list to need to force a rescan.

2003-07-06  Bart Veer  <bartv@ecoscentric.com>

	* include/test/stackmon.h (cyg_test_size_a_stack):
	If stack checking is enabled, look for 0xdeadbeef rather than 0x0
	to determine usage. Also reset the interrupt stack to that value.

2003-07-02  Jonathan Larmour  <jifl@eCosCentric.com>

	* doc/kernel.sgml: Document that timeouts for timed functions are
	absolute, not relative. Also document new semantics for
	cyg_semaphore_timed_wait() for timeouts in the past.

2003-07-01  Nick Garnett  <nickg@balti.calivar.com>

	* include/clock.hxx: Made Cyg_Counter::add_alarm() and
	Cyg_Counter::rem_alarm() private functions. They no longer lock
	the scheduler, so should not be called directly, only via the
	Cyg_Alarm functions.

	* include/clock.inl: Removed inline version of